--- a/app/less/style.less
+++ b/app/less/style.less
@@ -28,7 +28,7 @@ body {
   width: auto;
   color: white;
   font-family: "Shree Devanagari 714";
-  allign: center;
+  align: center;
 }
 
 #bild1 {
@@ -55,14 +55,16 @@ body {
 }*/
 
 .jumbotron {
-  background-image: url("https://media.giphy.com/media/IIBB5X1izB16/giphy.gif");
+  background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/giphy.gif");
   height: 500px;
+  background-position: top;
 }
 
 #pttp {
   font-family: "Shree Devanagari 714";
   margin-top: 15%;
   margin-left: 21%;
+  font-weight: 100;
 }
 /*Text on jumbotron*/
 
@@ -84,6 +86,33 @@ body {
   border-top-color: darkgoldenrod;
   border-top-width: 2px;
 }
+
+#competition {
+  background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/stock-illustration-93521929-set-of-decorative-sketch-award-with-trophy.jpg");
+  background-position: top;
+}
+
+#shop {
+  background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/stock-illustration-25261888-shopping-bags.jpg");
+  background-position: top;
+}
+
+#artists {
+  background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/42572066-scissors-cutting-ribbon-drawing.jpg");
+  background-position: center;
+}
+
+#forum {
+  background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/speech-bubbles-sketch-21374783.jpg");
+  background-position: center;
+  background-size: 45%;
+}
+
+#about {
+  background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/little_people_dribbb.png");
+  background-position: center;
+}
+
 
 /* Custom page footer */
 .footer {
