--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -9,81 +9,82 @@
 <!-- START THE FEATURETTES -->  
 <hr class="featurette-divider">  
 <a href="#">
-    <div class="row featurette"> 
+    <div id="competition" , class="row featurette"> 
         <div class="col-md-7">  <h2 class="featurette-heading">COMPETITION<span class="text-muted"></span></h2>  <p
                 class="lead"></p> 
         </div>
          
-        <div class="col-md-5"> 
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
-                 alt="Generic placeholder image">
-             
-        </div>
+        <!-- <div class="col-md-5"> 
+             <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
+                  alt="Generic placeholder image">
+              
+         </div>-->
          
     </div>
       </a>
 <hr class="featurette-divider">  
 <a href="/webShop.html">
-    <div class="row featurette"> 
+    <div id="shop" , class="row featurette"> 
         <div class="col-md-7 col-md-push-5">  <h2 class="featurette-heading">SHOP<span class="text-muted"></span></h2> 
             <p
                     class="lead"></p> 
         </div>
          
-        <div class="col-md-5 col-md-pull-7"> 
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
-                 alt="Generic placeholder image">
-             
-        </div>
+        <!--  <div class="col-md-5 col-md-pull-7"> 
+              <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
+                   alt="Generic placeholder image">
+               
+          </div>-->
          
     </div>
       </a>
 <hr class="featurette-divider">  
 <a href="/artistListAnsicht.html">
-    <div class="row featurette"> 
+    <div id="artists" , class="row featurette"> 
         <div class="col-md-7">  <h2 class="featurette-heading"> ARTISTS<span class="text-muted"></span></h2>  <p
                 class="lead"></p> 
         </div>
          
-        <div class="col-md-5"> 
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
-                 alt="Generic placeholder image">
-             
-        </div>
+
+        <!-- <div class="col-md-5"> 
+             <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
+                  alt="Generic placeholder image">
+              
+         </div>-->
          
     </div>
       
 </a>
 <hr class="featurette-divider">  
 <a href="#">
-    <div class="row featurette"> 
+    <div id="forum" , class="row featurette"> 
         <div class="col-md-7 col-md-push-5">  <h2 class="featurette-heading">FORUM<span class="text-muted"></span></h2> 
             <p
                     class="lead"></p> 
         </div>
          
-        <div class="col-md-5 col-md-pull-7"> 
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
-                 alt="Generic placeholder image">
-             
-        </div>
+        <!-- <div class="col-md-5 col-md-pull-7"> 
+             <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
+                  alt="Generic placeholder image">
+              
+         </div>-->
          
     </div>
       
 </a>
 <hr class="featurette-divider">  
 <a href="#">
-    <div class="row featurette"> 
+    <div id="about" , class="row featurette"> 
         <div class="col-md-7">  <h2 class="featurette-heading">ABOUT US<span class="text-muted"></span>
         </h2>  <p
                 class="lead"></p> 
         </div>
          
-        <div class="col-md-5"> 
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
-                 alt="Generic placeholder image">
-             
-        </div>
+        <!--   <div class="col-md-5"> 
+               <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
+                    alt="Generic placeholder image">
+                
+           </div> -->
          
     </div>
      
