Homepage ist vllt fertig.

--- a/app/tpl/partials/footer.hbs
+++ b/app/tpl/partials/footer.hbs
@@ -1,7 +1,9 @@
 <footer class="footer"> 
-    <p class="pull-right">
-        <a href="#" , class="back-to-top"> Back to Top</a></p>  <p>&copy; 2016 Company, Inc. &middot;
-        <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> 
+
+    <p class="pull-right"><a id="btt" , href="#" , class="back-to-top"> Back to Top</a></p> 
+
+    <p>&copy; 2016 Company, Inc. &middot;<a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> 
+
 </footer>
  </div>
 
