--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -23,7 +23,7 @@
 </head>
   <!-- NAVBAR ================================================== --> 
 <body>  
-<nav class="navbar navbar-default"> 
+<nav class="navbar navbar-default navbar-fixed-top"> 
     <div class="container-fluid">
 
         <div class="navbar-header"> 
@@ -34,19 +34,19 @@
         <ul class="nav navbar-nav navbar-right"> 
 
             <li>
-                <a class="glyphicon glyphicon-user" , class="btn btn-default" href="#"> SIGN UP</a>
+                <a id="b1" , class="glyphicon glyphicon-user" , class="btn btn-default" href="#"> SIGN UP</a>
             </li>
 
             <li>
-                <a class="glyphicon glyphicon-log-in" , class="btn btn-default" href="#"> LOG IN</a>
+                <a id="b2" , class="glyphicon glyphicon-log-in" , class="btn btn-default" href="#"> LOG IN</a>
             </li>
 
             <li class="dropdown"> 
 
 
-                <button class="btn btn-default" ‚ class="dropdown-toggle" data-toggle="dropdown">
+                <button id="b3" , class="btn btn-link" ‚ class="dropdown-toggle" data-toggle="dropdown">
                     <span class="glyphicon glyphicon-align-justify"></span></button>
-                <span class="caret"></span></a> 
+                <span class="caret"></span> 
                 <ul class="dropdown-menu"> 
 
                     <li><a href="#">COMPETITION</a></li>
@@ -61,6 +61,14 @@
                      
                 </ul>
 
+            </li>
+
+            <li>
+                <a id="b4" , class="btn btn-link" , href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a>
+            </li>
+
+            <li>
+                <a id="b5" , class="btn btn-link" , href="#"><span class="glyphicon glyphicon-heart"></span></a>
             </li>
              
         </ul>
