--- a/app/less/style.less
+++ b/app/less/style.less
@@ -24,7 +24,7 @@ body {
 }
 
 .navbar-default {
-  height: 100px;
+  height: 90px;
   width: auto;
   color: white;
   font-family: "Shree Devanagari 714";
@@ -36,6 +36,32 @@ body {
   position: absolute;
   top: 0;
 }
+
+#b1 {
+  color: darkgoldenrod;
+}
+
+#b2 {
+  color: darkred;
+}
+
+#b3 {
+  margin-bottom: -35px;
+  margin-right: -20px;
+  color: #000;
+}
+
+#b4 {
+  margin-bottom: -40px;
+  margin-right: -10px;
+  color: darkgoldenrod;
+}
+
+#b5 {
+  margin-bottom: -40px;
+  color: darkred;
+}
+
 
 /*#bild2 {
   width: 50%;
@@ -56,15 +82,20 @@ body {
 
 .jumbotron {
   background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/giphy.gif");
-  height: 500px;
-  background-position: top;
+  height: 400px;
+  background-position: center;
+  margin-bottom: -50px;
 }
 
+.vertical-center {
+  min-height: 50%;
+  min-height: 50vh;
+  display: flex;
+  align-items: center;
+}
 #pttp {
   font-family: "Shree Devanagari 714";
-  margin-top: 15%;
-  margin-left: 21%;
-  font-weight: 100;
+  color: darkred;
 }
 /*Text on jumbotron*/
 
@@ -88,27 +119,36 @@ body {
 }
 
 #competition {
+  margin-bottom: -20px;
   background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/stock-illustration-93521929-set-of-decorative-sketch-award-with-trophy.jpg");
   background-position: top;
 }
 
 #shop {
+  margin-top: -20px;
+  margin-bottom: -20px;
   background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/stock-illustration-25261888-shopping-bags.jpg");
   background-position: top;
 }
 
 #artists {
+  margin-top: -20px;
+  margin-bottom: -20px;
   background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/42572066-scissors-cutting-ribbon-drawing.jpg");
   background-position: center;
 }
 
 #forum {
+  margin-top: -20px;
+  margin-bottom: -20px;
   background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/speech-bubbles-sketch-21374783.jpg");
   background-position: center;
   background-size: 45%;
 }
 
 #about {
+  margin-top: -20px;
+  margin-bottom: -20px;
   background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/little_people_dribbb.png");
   background-position: center;
 }
@@ -120,6 +160,10 @@ body {
   color: #777;
   border-top: 1px solid #e5e5e5;
   font-family: "Shree Devanagari 714";
+}
+
+#btt {
+  color: darkred;
 }
 
 /* Customize container */
