ProduktAnsicht Beispiel Seite mit button Funktionen

--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -1,5 +1,5 @@
 
-<table align="center">
+<table class="contain" align="center">
     <tr>
         <td >
             <div class="leftphoto">
@@ -12,25 +12,24 @@
                 <img id= "leftphoto3" src="http://pics4.esprit.de/Shop/PicSPV_ZoomFlat/096EO1F013_110.jpg" alt="First slide">
             </div>
         </td>
+
+
         <td>
 
                 <div class="midphoto">
-                    <img src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg"
-                         onmouseover="func1(this);"
-                         onmouseout="func2(this);"
+                    <img src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" width="300px" height="500px" alt="mid "
                     />
                 </div>
 
-
-
         </td>
+
         <td>
 
             <div id = "button2" >
                 <h2> Preis </h2>
 
             </div>
-            <div class ="grad" id = "button2">
+            <div class ="kreis" >
                 <h2 id ="button22"></h2>
             </div>
 
@@ -65,7 +64,11 @@
             </div>
 
         </td>
+
+
     </tr>
+
+
     <tr>
 
         <td  valign="middle" align="center" colspan="3">
@@ -75,7 +78,3 @@
         </p></td>
     </tr>
 </table>
-<img id="zoom_01" src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" data-zoom-image="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg"/>
-<script>
-    $("#zoom_01").elevateZoom();
-</script>
