--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -1,12 +1,16 @@
 .midphoto
 {
-    margin-left : 200px;
+    margin-left : 30px;
+    margin-bottom: 10px ;
+
+
+    border-radius: 10px;
+    background-position: center center;
+    background-size: cover
+
 }
-#midphoto
-{
-    margin-left: -40px;
-    width: 450px;
-    height: 600px;
+.midphoto:hover{
+    transform:scale(1.2) ;
 }
 #button1
 {
@@ -68,15 +72,17 @@
 {
     margin-left: 100px;
 }
-.grad
+.kreis
 {
+    margin-left:79px;
     margin-bottom: 30px;
     width:20px;
     height:20px;
     border-radius:50px;
     background:linear-gradient(to bottom, #FF0000 , #FF0000 )
 }
-#zoom_01{
-    width: 250px;
-    height: 350px;
+
+.contain{
+
+    margin-bottom: -10px;
 }
