--- a/app/less/webShop.less
+++ b/app/less/webShop.less
@@ -1,10 +1,11 @@
-/*Design Websho*/
+/*Design Webshop*/
+
 
 /*Design Kategorienauswahl*/
 .list-group-Segment{
   position:fixed;
   left:1px;
-  margin-top:20px;
+  margin-top:100px;
 }
 /*Design Bereich der Produktpräsentation*/
 .aProdukt .produktShopName span {
@@ -12,7 +13,7 @@
 }
 .aProdukt{
 
-  margin-top: 20px;
+  margin-top: 100px;
   width: 220px;
   heigth:250px;
 }
