--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -1,44 +1,58 @@
 
-<table class="contain" align="center">
+<table align="center">
     <tr>
-        <td >
-            <div class="leftphoto">
-                <img id= "leftphoto1" src=" http://pics4.esprit.de/Shop/PicSPV_ZoomSecondView/096EO1F013_110.jpg" alt="First slide">
-            </div>
-            <div class="leftphoto">
-                <img id= "leftphoto2" src="http://pics4.esprit.de/Shop/PicSPV_ZoomSide/096EO1F013_110.jpg" alt="First slide">
-            </div>
-            <div class="leftphoto">
-                <img id= "leftphoto3" src="http://pics4.esprit.de/Shop/PicSPV_ZoomFlat/096EO1F013_110.jpg" alt="First slide">
-            </div>
-        </td>
-
-
         <td>
-
-                <div class="midphoto">
-                    <img src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" width="300px" height="500px" alt="mid "
-                    />
-                </div>
+            <p><strong>name des produkts</strong></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
 
         </td>
-
         <td>
+            <div class="slider">
+                <input type="radio" name="slide_switch" id="id1" checked>
+                <label id="id11" for="id1">
+                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ThumbOutfit/096EO1F013_110.jpg" alt="" width ="50px">
+                </label>
+                <!--main image-->
+                <img id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomOutfit/096EO1F013_110.jpg" alt="image">
 
+                <input type="radio" name="slide_switch" id="id2">
+                <label id="id22" for="id2">
+                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbMainView/096EO1F013_110.jpg" alt="" width ="50px">
+                </label>
+                <!--main image-->
+                <img id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" alt="image">
+
+                <input type="radio" name="slide_switch" id="id3">
+                <label id="id33" for="id3">
+                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbSecondView/096EO1F013_110.jpg" alt="" width ="50px">
+                </label>
+                <img id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomSecondView/096EO1F013_110.jpg" alt="image">
+                <input type="radio" name="slide_switch" id="id4">
+                <label id="id33" for="id4">
+                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbSide/096EO1F013_110.jpg" alt="" width ="50px">
+                </label>
+                <img id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomSide/096EO1F013_110.jpg" alt="image">
+                <input type="radio" name="slide_switch" id="id5">
+                <label id="id33" for="id5">
+                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbFlat/096EO1F013_110.jpg" alt="" width ="50px">
+                </label>
+                <img id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomFlat/096EO1F013_110.jpg" alt="image">
+
+            </div>
+        </td>
+        <td>
             <div id = "button2" >
                 <h2> Preis </h2>
-
             </div>
-            <div class ="kreis" >
+            <div class ="grad" id = "button2">
                 <h2 id ="button22"></h2>
             </div>
-
-
-
             <div id = "button1">
-
                 <ul>
-
                     <ol>
                         <p id = "Groesse"><strong>Größe</strong></p>
                         <select name="size">
@@ -49,7 +63,6 @@
                             <option value="L">L</option>
                             <option value="XL">XL</option>
                         </select>
-
                     </ol>
                 </ul>
             </div>
@@ -62,19 +75,6 @@
                     <button id ="button31" type="button" class="btn  "><strong>Wunschzettel</strong></button>
                 </div></h3>
             </div>
-
         </td>
-
-
-    </tr>
-
-
-    <tr>
-
-        <td  valign="middle" align="center" colspan="3">
-            <p style="margin-top: 30px"><strong>Business-Bluse aus Baumwollmix</strong></p>
-            <p id ="produktDetails">
-              Hier geht es um eine ziemlich schöne Frau, tolles Gesicht  aber schade, dass sie nicht viel lächeln . scheiße
-        </p></td>
     </tr>
 </table>
