--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -2,12 +2,15 @@
 <table align="center">
     <tr>
         <td>
-            <p><strong>name des produkts</strong></p>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
+            <p><strong>Fließende Satinbluse mit Volant</strong></p>
+            <p>Details</p>
+            <p>Größeninfo</p>
+            <p>Material/Pflege</p>
+            <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym02.png" alt="" >
+            <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym08.png" alt="" >
+            <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym0C.png" alt="" >
+            <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym0F.png" alt="" >
+            <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym06.png" alt="" >
 
         </td>
         <td>
