--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -8,7 +8,7 @@
             <p>Details</p>
             <p>Größeninfo</p>
             <p>Material/Pflege</p>
-            <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym02.png" alt="" >
+            <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym02.png" alt="test" >
             <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym08.png" alt="" >
             <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym0C.png" alt="" >
             <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym0F.png" alt="" >
