--- a/app/less/style.less
+++ b/app/less/style.less
@@ -2,6 +2,7 @@
 @import "produktAnsicht";
 @import "webShop";
 @import "artistAnsicht";
+@import "impressum";
 
 /* Space out content a bit */
 body {
