--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -60,7 +60,7 @@
                      
                     <li><a href="/artistListAnsicht.html">ARTIST</a></li>
                      
-                    <li><a href="#">ABOUT US</a></li>
+                    <li><a href="/impressum.html">ABOUT US</a></li>
                      
                 </ul>
 
