--- a/app/tpl/partials/impressumMain.hbs
+++ b/app/tpl/partials/impressumMain.hbs
@@ -1,8 +1,62 @@
-<div class="container">
-    <div class="row category-child" style="margin-top:20px">
-        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
-            <a class="thumbnail" href="/Impressum.html"></a>
+<div id="description" , class="container-fluid">
+    <h1 id="headline">ABOUT US</h1>
+    <p>Description of company.</p>
+</div>
+
+
+<div id="fixed" class="container">
+
+    <h2 id="hi">IMPRINT</h2>
+
+    <pre id="infos">
+        POWER TO THE PEOPLE
+        Straße 1
+        21000 Hamburg
+        Germany
+        E-Mail Adresse: service@pttp.de
+
+        Management
+        Philip Baharlou
+    </pre>
+
+</div>
+<div id="speak">
+    <h4 id="contactUs">Contact Us</h4>
+    <form id="contact" , class="form-horizontal" role="form" method="post" action="#">
+        <div class="form-group">
+            <label for="name" class="col-sm-2 control-label">Name</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="name" name="name" placeholder="First & Last Name" value="">
+            </div>
         </div>
-        <p>hallo</p>
-    </div>
+        <div class="form-group">
+            <label for="email" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-10">
+                <input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com"
+                       value="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="message" class="col-sm-2 control-label">Message</label>
+            <div class="col-sm-10">
+                <textarea class="form-control" rows="4" name="message"></textarea>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="human" class="col-sm-2 control-label">2 + 3 = ?</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="human" name="human" placeholder="Your Answer">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-10 col-sm-offset-2">
+                <input id="send" id="submit" name="submit" type="submit" value="Send" class="btn btn-primary">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-10 col-sm-offset-2">
+                <! Will be used to display an alert to the user>
+            </div>
+        </div>
+    </form>
 </div>
