--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -75,7 +75,7 @@
       
 </a>
 <hr class="featurette-divider">  
-<a href="#">
+<a href="/impressum.html">
     <div id="about" , class="row featurette"> 
         <div class="col-md-7">  <h2 class="featurette-heading">ABOUT US<span class="text-muted"></span>
         </h2>  <p
