ProduktAnsicht Beispiel Seite mit button Funktionen

--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -1,7 +1,13 @@
-#id111
-{
-  width: 300px;
-  height: 450px;
+
+#id111{
+    margin-top: 20px;
+    width:300px;
+    height:400px;
+    border-radius: 10px;
+    transition:0.5s linear;
+}
+#id111:hover{
+    transform:scale(1.2);
 }
 .slider
 {
