--- a/app/less/style.less
+++ b/app/less/style.less
@@ -81,8 +81,9 @@ body {
 }*/
 
 .jumbotron {
+  margin-top: 60px;
   background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/giphy.gif");
-  height: 400px;
+  height: 380px;
   background-position: center;
   margin-bottom: -50px;
 }
@@ -150,7 +151,8 @@ body {
   margin-top: -20px;
   margin-bottom: -20px;
   background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/little_people_dribbb.png");
-  background-position: center;
+  background-position: bottom;
+  background-size: 100%;
 }
 
 
