--- a/app/tpl/partials/impressumMain.hbs
+++ b/app/tpl/partials/impressumMain.hbs
@@ -20,8 +20,10 @@
     </pre>
 
 </div>
+
 <div id="speak">
     <h4 id="contactUs">Contact Us</h4>
+    <p>funktioniert noch nicht</p>
     <form id="contact" , class="form-horizontal" role="form" method="post" action="#">
         <div class="form-group">
             <label for="name" class="col-sm-2 control-label">Name</label>
@@ -50,7 +52,7 @@
         </div>
         <div class="form-group">
             <div class="col-sm-10 col-sm-offset-2">
-                <input id="send" id="submit" name="submit" type="submit" value="Send" class="btn btn-primary">
+                <input id="submit" name="submit" type="submit" value="Send" class="btn btn-primary">
             </div>
         </div>
         <div class="form-group">
