--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -4,18 +4,28 @@
 
     <tr>
         <td>
-            <p><strong>Fließende Satinbluse mit Volant</strong></p>
-            <p>Details</p>
-            <p>Größeninfo</p>
-            <p>Material/Pflege</p>
-            <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym02.png" alt="test" >
-            <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym08.png" alt="" >
-            <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym0C.png" alt="" >
-            <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym0F.png" alt="" >
-            <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym06.png" alt="" >
+            <div id="testxem">
 
+            <li><p><strong>Fließende Satinbluse mit Volant</strong></p></li>
+            <ol>
+                <li>
+                    <p style="width: 250px" >Details:<br>
+                Die locker figurumspielende Bluse besitzt einen Stegkragen und V-Ausschnitt mit akzentuierenden doppelten Volant-Bändern entlang der Front.<br>
+                Die Manschetten sind je mit zwei schimmernden Perlmuttknöpfen besetzt.<br>
+                Der Saum ist im Rücken verlängert und abgerundet.
+                    </p>
+                </li>
+                <li><p style="width: 250px">Größeninfo:<br>Länge ab Rückenmitte in Gr. 36 ca. 68 cm, Ärmellänge ab Schulter ca. 58 cm (kann je nach Gr. leicht variieren)</p></li>
+                <li><p>Material/Pflege:<br>54% Polyester | 46% Viskose</p></li>
+                <li><img src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym02.png" alt="" >
+                <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym08.png" alt="" >
+                <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym0C.png" alt="" >
+                <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym0F.png" alt="" >
+                <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym06.png" alt="" ></li>
+            </ol>
+            </div>
         </td>
-        <td>
+        <td >
             <div class="slider">
                 <input type="radio" name="slide_switch" id="id1" checked>
                 <label id="id11" for="id1">
