--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -99,3 +99,6 @@ input[name='slide_switch']
   border-radius:50px;
   background:linear-gradient(to bottom, #FF0000 , #FF0000 )
 }
+.testxem{
+ margin: 0px 0px 0px 0px;
+}
