--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -6,9 +6,31 @@
     border-radius: 10px;
     transition:0.5s linear;
 }
-#id111:hover{
-    transform:scale(1.2);
+#id11:hover {
+    transform: scale(1.2);
+
 }
+#id22:hover {
+    transform: scale(1.2);
+
+}
+#id33:hover {
+    transform: scale(1.2);
+
+}
+#id44:hover {
+    transform: scale(1.2);
+
+}
+#id111:hover {
+    transform: scale(1.2);
+
+}
+
+
+
+
+
 .slider
 {
   height: 640px;
