--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -19,35 +19,36 @@
             <div class="slider">
                 <input type="radio" name="slide_switch" id="id1" checked>
                 <label id="id11" for="id1">
-                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ThumbOutfit/096EO1F013_110.jpg" alt="" width ="50px">
+                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ThumbOutfit/096EO1F013_110.jpg" alt="image" width ="50px">
                 </label>
                 <!--main image-->
                 <img  id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomOutfit/096EO1F013_110.jpg" alt="image">
 
                 <input type="radio" name="slide_switch" id="id2">
                 <label id="id22" for="id2">
-                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbMainView/096EO1F013_110.jpg" alt="" width ="50px">
+                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbMainView/096EO1F013_110.jpg" alt="image" width ="50px">
                 </label>
                 <!--main image-->
                 <img id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" alt="image">
 
                 <input type="radio" name="slide_switch" id="id3">
                 <label id="id33" for="id3">
-                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbSecondView/096EO1F013_110.jpg" alt="" width ="50px">
+                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbSecondView/096EO1F013_110.jpg" alt="image" width ="50px">
                 </label>
                 <img id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomSecondView/096EO1F013_110.jpg" alt="image">
 
                 <input type="radio" name="slide_switch" id="id4">
                 <label id="id33" for="id4">
-                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbSide/096EO1F013_110.jpg" alt="" width ="50px">
+                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbSide/096EO1F013_110.jpg" alt="image" width ="50px">
                 </label>
                 <img id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomSide/096EO1F013_110.jpg" alt="image">
 
                 <input type="radio" name="slide_switch" id="id5">
                 <label id="id33" for="id5">
-                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbFlat/096EO1F013_110.jpg" alt="" width ="50px">
+                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ThumbFlat/096EO1F013_110.jpg" alt="image" width ="50px">
                 </label>
                 <img id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomFlat/096EO1F013_110.jpg" alt="image">
+
 
             </div>
         </td>
