WebShop funktionalität Änderung

--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -1,9 +1,11 @@
+
 <div class="container">
+
     <div class="list-group-Segment">
-        <a href="#" class="list-group-item" onclick="sortdiv();">Shirts</a>
-        <a href="#" class="list-group-item" onclick="sortdiv();">Tops</a>
-        <a href="#" class="list-group-item" onclick="sortdiv();">Pullover</a>
-        <a href="#" class="list-group-item" onclick="sortdiv();">Jacken</a>
+        <a href="#" class="list-group-item" onclick="sorthideTops();">Tops</a>
+        <a href="#" class="list-group-item" onclick="sorthideShirt();">Shirts</a>
+        <a href="#" class="list-group-item" onclick="sorthidePullover();">Pullover</a>
+        <a href="#" class="list-group-item" onclick="sorthideJacken();">Jacken</a>
     </div>
     <!-- Produnktpräsenationsbereich-->
     <!-- Zur Zeit 3 Reihen a 3 Produkte-->
@@ -18,11 +20,37 @@
                     <div class="wrapper">
                         <div class="caption produktShopName">
                             <!-- wird auf Produktbild gelegt-->
-                            <span>Produkt 2 Preis</span>
+                            <span>Shirt A Preis</span>
                         </div>
                     </div>
                 </a>
                 <!-- Bsp wie Artistlink einzubinden-->
+                <a href="/artistAnsicht.html"> Link to Artist</a>
+            </div>
+        </div>
+        <div id="-4">
+            <div class="aProdukt col-md-12">
+                <a class="thumbnail" href="/produktAnsicht.html">
+                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
+                    <div class="wrapper">
+                        <div class="caption produktShopName">
+                            <span>Jacke A Preis</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="/artistAnsicht.html"> Link to Artist</a>
+            </div>
+        </div>
+        <div id="-4">
+            <div class="aProdukt col-md-12">
+                <a class="thumbnail" href="/produktAnsicht.html">
+                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
+                    <div class="wrapper">
+                        <div class="caption produktShopName">
+                            <span>Jacke B Preis</span>
+                        </div>
+                    </div>
+                </a>
                 <a href="/artistAnsicht.html"> Link to Artist</a>
             </div>
         </div>
@@ -32,7 +60,46 @@
                     <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
                     <div class="wrapper">
                         <div class="caption produktShopName">
-                            <span>Produkt 3 Preis</span>
+                            <span>Pullover A Preis</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="/artistAnsicht.html"> Link to Artist</a>
+            </div>
+        </div>
+        <div id="-2">
+            <div class="aProdukt col-md-12">
+                <a class="thumbnail" href="/produktAnsicht.html">
+                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
+                    <div class="wrapper">
+                        <div class="caption produktShopName">
+                            <span>Shirt B Preis</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="/artistAnsicht.html"> Link to Artist</a>
+            </div>
+        </div>
+        <div id="-3">
+            <div class="aProdukt col-md-12">
+                <a class="thumbnail" href="/produktAnsicht.html">
+                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
+                    <div class="wrapper">
+                        <div class="caption produktShopName">
+                            <span>Pullover B Preis</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="/artistAnsicht.html"> Link to Artist</a>
+            </div>
+        </div>
+        <div id="-4">
+            <div class="aProdukt col-md-12">
+                <a class="thumbnail" href="/produktAnsicht.html">
+                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
+                    <div class="wrapper">
+                        <div class="caption produktShopName">
+                            <span>Jacke C Preis</span>
                         </div>
                     </div>
                 </a>
@@ -45,7 +112,7 @@
                     <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
                     <div class="wrapper">
                         <div class="caption produktShopName">
-                            <span>Produkt 1 Preis</span>
+                            <span>Tops A Preis</span>
                         </div>
                     </div>
                 </a>
@@ -58,72 +125,7 @@
                     <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
                     <div class="wrapper">
                         <div class="caption produktShopName">
-                            <span>Produkt 1 Preis</span>
-                        </div>
-                    </div>
-                </a>
-                <a href="/artistAnsicht.html"> Link to Artist</a>
-            </div>
-        </div>
-        <div id="-1">
-            <div class="aProdukt col-md-12">
-                <a class="thumbnail" href="/produktAnsicht.html">
-                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
-                    <div class="wrapper">
-                        <div class="caption produktShopName">
-                            <span>Produkt 1 Preis</span>
-                        </div>
-                    </div>
-                </a>
-                <a href="/artistAnsicht.html"> Link to Artist</a>
-            </div>
-        </div>
-        <div id="-1">
-            <div class="aProdukt col-md-12">
-                <a class="thumbnail" href="/produktAnsicht.html">
-                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
-                    <div class="wrapper">
-                        <div class="caption produktShopName">
-                            <span>Produkt 1 Preis</span>
-                        </div>
-                    </div>
-                </a>
-                <a href="/artistAnsicht.html"> Link to Artist</a>
-            </div>
-        </div>
-        <div id="-1">
-            <div class="aProdukt col-md-12">
-                <a class="thumbnail" href="/produktAnsicht.html">
-                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
-                    <div class="wrapper">
-                        <div class="caption produktShopName">
-                            <span>Produkt 1 Preis</span>
-                        </div>
-                    </div>
-                </a>
-                <a href="/artistAnsicht.html"> Link to Artist</a>
-            </div>
-        </div>
-        <div id="-1">
-            <div class="aProdukt col-md-12">
-                <a class="thumbnail" href="/produktAnsicht.html">
-                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
-                    <div class="wrapper">
-                        <div class="caption produktShopName">
-                            <span>Produkt 1 Preis</span>
-                        </div>
-                    </div>
-                </a>
-                <a href="/artistAnsicht.html"> Link to Artist</a>
-            </div>
-        </div>
-        <div id="-1">
-            <div class="aProdukt col-md-12">
-                <a class="thumbnail" href="/produktAnsicht.html">
-                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
-                    <div class="wrapper">
-                        <div class="caption produktShopName">
-                            <span>Produkt 1 Preis</span>
+                            <span>Tops B Preis</span>
                         </div>
                     </div>
                 </a>
@@ -132,7 +134,6 @@
         </div>
     </div>
 </div>
-
 
 
 
