--- a/app/tpl/partials/footer.hbs
+++ b/app/tpl/partials/footer.hbs
@@ -13,6 +13,7 @@
 <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script> 
 <script src="/node_modules/baqend/dist/baqend.js"></script> 
 <script src="js/main.js"></script> 
+<script src="js/webShop.js"></script> 
 
 <!-- endbuild -->
  </body> 
