--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -1,126 +1,103 @@
-
-#id111{
-    margin-top: 20px;
-    width:300px;
-    height:400px;
-    border-radius: 10px;
-    transition:0.5s linear;
-}
-#id11:hover {
-    transform: scale(1.2);
-
-}
-#id22:hover {
-    transform: scale(1.2);
-
-}
-#id33:hover {
-    transform: scale(1.2);
-
-}
-#id44:hover {
-    transform: scale(1.2);
-
-}
-#id111:hover {
-    transform: scale(1.2);
-
-}
-
-
-
-
-
-.slider
-{
-  height: 640px;
+.carousel-inner {
   position: relative;
-
-}
-.slider>img
-{
-  position:absolute;
-  top: 80px;
-  left: 50px;
-}
-#id22
-{
-  margin-top: 540px;
-}
-input[name='slide_switch']
-{
-  display: none;
-}
-.slider label
-{
-  margin: 18px 0 0 18px;
-  border: 3px solid #999;
-  cursor : pointer;
-  opacity: .6;
-  transition: all .3s;
+  width: 100%;
+  min-height: 300px;
 }
 
-.slider input[name='slide_switch']:checked + label
-{
+.carousel-control.right {
+  right: 0;
+  left: auto;
+  background-image: none !important;
+  background-repeat: repeat-x;
+}
+.carousel-control.left {
+  left: 0;
+  right: auto;
+  background-image: none !important;
+  background-repeat: repeat-x;
+}
+#carousel-example-generic {
+  margin: 20px auto;
+  width: 100%;
+}
+
+#carousel-custom {
+  margin: 20px auto;
+  width: 400px;
+}
+#carousel-custom .carousel-indicators {
+  margin: 10px 0 0;
+  overflow: auto;
+  position: static;
+  text-align: left;
+  white-space: nowrap;
+  width: 100%;
+  overflow:hidden;
+}
+#carousel-custom .carousel-indicators li {
+  background-color: transparent;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  display: inline-block;
+  height: auto;
+  margin: 0 !important;
+  width: auto;
+}
+#carousel-custom .carousel-indicators li img {
+  display: block;
+  opacity: 0.5;
+}
+#carousel-custom .carousel-indicators li.active img {
   opacity: 1;
-  border-color: #666;
 }
-.slider input[name='slide_switch']~ img
-{
-  opacity: 0;
-  -webkit-transform: scale(1,1);
-  transform: scale(1.1)
+#carousel-custom .carousel-indicators li:hover img {
+  opacity: 0.75;
 }
-.slider input[name='slide_switch']:checked +label+img{
-  opacity:1;
-  -webkit-transform: (1);
-  transform : scale(1);
+#carousel-custom .carousel-outer {
+  position: relative;
+}
+.carousel-indicators li img {
+  height: 66px;
+  width: 52px;}
 
-}
-
-#button1
-{
-  margin-left: 0px;
-}
-#Groesse
-{
-  margin-left: 5px ;
-  margin-bottom: -2px;
-}
-#button11
-{
-  color: black;
-  background-color: #e7e7e7;
-  padding-right: 33px;
-}
-#button2
-{
-  margin-left:79px;
+ul.gallery{
+  margin-top: 80px;
+  margin-left: 3vw;
+  margin-right:3vw;
 }
 
-#button3
-{
-  margin-left:79px;
+.zoom {
+  -webkit-transition: all 0.6s ease-in-out;
+  -moz-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+  cursor: -webkit-zoom-in;
+  cursor: -moz-zoom-in;
+  cursor: zoom-in;
 }
-#button21
-{
-  color: white;
-  background-color:#e7e7e7 ;
-  padding-right: 39px;
+
+.zoom:hover,
+.zoom:active,
+.zoom:focus {
+  /**adjust scale to desired size,
+  add browser prefixes**/
+  -ms-transform: scale(1.5);
+  -moz-transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+  -o-transform: scale(1.5);
+  transform: scale(1.5);
+  position:relative;
+  z-index:100;
 }
-#button31
-{ color: black;
-  background-color: #e7e7e7;
-  padding-right: 39px;
-}
-.grad
-{
-  margin-bottom: 30px;
-  width:20px;
-  height:20px;
-  border-radius:50px;
-  background:linear-gradient(to bottom, #FF0000 , #FF0000 )
-}
-.testxem{
- margin: 0px 0px 0px 0px;
+
+/**To keep upscaled images visible on mobile,
+increase left & right margins a bit**/
+@media only screen and (max-width: 768px) {
+  ul.gallery {
+    margin-left: 15vw;
+    margin-right: 15vw;
+  }
+
+  /**TIP: Easy escape for touch screens,
+  give gallery's parent container a cursor: pointer.**/
+  .DivName {cursor: pointer}
 }
