--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -1,98 +1,73 @@
+<!--
+Responsive Email Template by meartlab
+A component of source: codepen.io - zoom effect:elevateZoom
+Licensed under MIT
+-->
+<div class="container">
+    <div class="row">
+        <div class=" col-sm-4 col-xs-4">
+            <h4> MEartLAB - Ali MAMMADOV - </h4>
+            <h6><a hreh="https://www.behance.net/meartlab"> Follow for Updates</a></h6>
+            <div class="container">
+                <div id='carousel-custom' class='carousel slide' data-ride='carousel'>
+                    <div class='carousel-outer'>
+                        <!-- me art lab slider -->
+                        <div class='carousel-inner '>
+                            <div class='item active'>
+                                <img class="zoom" src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg' alt=''id="zoom_05"  data-zoom-image="http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg"/>
+                            </div>
+                            <div class='item'  id="zoom_05">
+                                <img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image2xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/8/2/3/3/5313328/image2xxl.jpg" />
+                            </div>
+                            <div class='item'>
+                                <img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image3xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/8/2/3/3/5313328/image3xxl.jpg" />
+                            </div>
 
-<table align="center">
+                            <div class='item'>
+                                <img src='http://images.asos-media.com/inv/media/3/6/7/0/4850763/multi/image1xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/3/6/7/0/4850763/multi/image1xxl.jpg" id="zoom_05"/>
+                            </div>
+                            <div class='item'>
+                                <img src='http://images.asos-media.com/inv/media/5/2/1/3/4603125/gold/image1xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/5/2/1/3/4603125/gold/image1xxl.jpg" id="zoom_05"/>
+                            </div>
+                            <div class='item'>
+                                <img src='http://images.asos-media.com/inv/media/5/3/6/8/4948635/mink/image1xxl.jpg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/5/3/6/8/4948635/mink/image1xxl.jpg" id="zoom_05"/>
+                            </div>
+                            <div class='item'>
+                                <img src='http://images.asos-media.com/inv/media/1/3/0/8/5268031/image2xxl.jpgg' alt='' data-zoom-image="http://images.asos-media.com/inv/media/1/3/0/8/5268031/image2xxl.jpg" id="zoom_05"/>
+                            </div>
+                            <script>
+                                $("#zoom_05").elevateZoom({ zoomType    : "inner", cursor: "crosshair" });
+                            </script>
+                        </div>
 
+                        <!-- sag sol -->
+                        <a class='left carousel-control' href='#carousel-custom' data-slide='prev'>
+                            <span class='glyphicon glyphicon-chevron-left'></span>
+                        </a>
+                        <a class='right carousel-control' href='#carousel-custom' data-slide='next'>
+                            <span class='glyphicon glyphicon-chevron-right'></span>
+                        </a>
+                    </div>
 
-    <tr>
-        <td>
-            <div id="testxem">
+                    <!-- thumb -->
+                    <ol class='carousel-indicators mCustomScrollbar meartlab'>
+                        <li data-target='#carousel-custom' data-slide-to='0' class='active'><img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg' alt='' /></li>
+                        <li data-target='#carousel-custom' data-slide-to='1'><img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image2xxl.jpg' alt='' /></li>
+                        <li data-target='#carousel-custom' data-slide-to='2'><img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image3xxl.jpg' alt='' /></li>
+                        <li data-target='#carousel-custom' data-slide-to='3'><img src='http://images.asos-media.com/inv/media/3/6/7/0/4850763/multi/image1xxl.jpg' alt='' /></li>
+                        <li data-target='#carousel-custom' data-slide-to='4'><img src='http://images.asos-media.com/inv/media/5/2/1/3/4603125/gold/image1xxl.jpg' alt='' /></li>
+                        <li data-target='#carousel-custom' data-slide-to='5'><img src='http://images.asos-media.com/inv/media/5/3/6/8/4948635/mink/image1xxl.jpg' alt='' /></li>
+                        <li data-target='#carousel-custom' data-slide-to='6'><img src='http://images.asos-media.com/inv/media/1/3/0/8/5268031/image2xxl.jpg' alt='' /></li>
 
-            <li><p><strong>Fließende Satinbluse mit Volant</strong></p></li>
-            <ol>
-                <li>
-                    <p style="width: 250px" >Details:<br>
-                Die locker figurumspielende Bluse besitzt einen Stegkragen und V-Ausschnitt mit akzentuierenden doppelten Volant-Bändern entlang der Front.<br>
-                Die Manschetten sind je mit zwei schimmernden Perlmuttknöpfen besetzt.<br>
-                Der Saum ist im Rücken verlängert und abgerundet.
-                    </p>
-                </li>
-                <li><p style="width: 250px">Größeninfo:<br>Länge ab Rückenmitte in Gr. 36 ca. 68 cm, Ärmellänge ab Schulter ca. 58 cm (kann je nach Gr. leicht variieren)</p></li>
-                <li><p>Material/Pflege:<br>54% Polyester | 46% Viskose</p></li>
-                <li><img src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym02.png" alt="" >
-                <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym08.png" alt="" >
-                <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym0C.png" alt="" >
-                <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym0F.png" alt="" >
-                <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym06.png" alt="" ></li>
-            </ol>
-            </div>
-        </td>
-        <td >
-            <div class="slider">
-                <input type="radio" name="slide_switch" id="id1" checked>
-                <label id="id11" for="id1">
-                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ThumbOutfit/096EO1F013_110.jpg" alt="image" width ="50px">
-                </label>
-                <!--main image-->
-                <img  id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomOutfit/096EO1F013_110.jpg" alt="image">
-
-                <input type="radio" name="slide_switch" id="id2">
-                <label id="id22" for="id2">
-                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbMainView/096EO1F013_110.jpg" alt="image" width ="50px">
-                </label>
-                <!--main image-->
-                <img id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" alt="image">
-
-                <input type="radio" name="slide_switch" id="id3">
-                <label id="id33" for="id3">
-                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbSecondView/096EO1F013_110.jpg" alt="image" width ="50px">
-                </label>
-                <img id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomSecondView/096EO1F013_110.jpg" alt="image">
-
-                <input type="radio" name="slide_switch" id="id4">
-                <label id="id33" for="id4">
-                    <img src="http://pics4.esprit.de/Shop/PicSPV_ThumbSide/096EO1F013_110.jpg" alt="image" width ="50px">
-                </label>
-                <img id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomSide/096EO1F013_110.jpg" alt="image">
-
-                <input type="radio" name="slide_switch" id="id5">
-                <label id="id33" for="id5">
-                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ThumbFlat/096EO1F013_110.jpg" alt="image" width ="50px">
-                </label>
-                <img id="id111" src ="http://pics4.esprit.de/Shop/PicSPV_ZoomFlat/096EO1F013_110.jpg" alt="image">
-
-
-            </div>
-        </td>
-        <td>
-            <div id = "button2" >
-                <h2> Preis </h2>
-            </div>
-            <div class ="grad" id = "button2">
-                <h2 id ="button22"></h2>
-            </div>
-            <div id = "button1">
-                <ul>
-                    <ol>
-                        <p id = "Groesse"><strong>Größe</strong></p>
-                        <select name="size">
-                            <option value="Wählen"><strong>Wählen</strong></option>
-                            <option value="XS">XS</option>
-                            <option value="S">S</option>
-                            <option value="M">M</option>
-                            <option value="L">L</option>
-                            <option value="XL">XL</option>
-                        </select>
                     </ol>
-                </ul>
+                </div>
+
+                <script type="text/javascript">
+
+                    $(document).ready(function() {
+                        $(".mCustomScrollbar").mCustomScrollbar({axis:"x"});
+                    });
+                </script>
             </div>
-            <h3>
-                <div id = "button2">
-                    <button id ="button21" type="button" class="btn  "><strong>In den Warenkorb</strong></button>
-                </div></h3>
-            <h3>
-                <div id ="button3">
-                    <button id ="button31" type="button" class="btn  "><strong>Wunschzettel</strong></button>
-                </div></h3>
-            </div>
-        </td>
-    </tr>
-</table>
+        </div>
+
