--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -1,7 +1,7 @@
 <!--
 Responsive Email Template by meartlab
 A component of source: codepen.io - zoom effect:elevateZoom
-Licensed under MIT
+Licensed under MI
 -->
 <div class="container">
     <div class="row">
