--- a/app/less/webShop.less
+++ b/app/less/webShop.less
@@ -5,7 +5,7 @@
 .list-group-Segment{
   position:fixed;
   left:1px;
-  margin-top:100px;
+  margin-top:90px;
 }
 /*Design Bereich der Produktpräsentation*/
 .aProdukt .produktShopName span {
@@ -13,9 +13,9 @@
 }
 .aProdukt{
 
-  margin-top: 100px;
+  margin-top: 90px;
   width: 220px;
-  heigth:250px;
+  height:250px;
 }
 
 
