--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -20,7 +20,8 @@
     <link href="css/style.css" rel="stylesheet">
     <script type="text/javascript" src="../../js/jquery.elevatezoom.js"></script>
     <script type="text/javascript" src="../../js/jquery-1.8.3.min.js"></script>
-    <!-- Start WOWSlider.com HEAD section -->
+ <!-- Thang das muss geschaut werden -->
+    <!-- Start WOWSlider.com HEAD section
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Example of Bootstrap 3 Carousel</title>
@@ -39,7 +40,7 @@
         .bs-example{
             margin: 20px;
         }
-    </style>
+    </style>-->
 </head>
   <!-- NAVBAR ================================================== --> 
 <body>  
