--- a/app/less/artistListAnsicht.less
+++ b/app/less/artistListAnsicht.less
@@ -1,16 +1,27 @@
+/*Design Bereich der Artistliste */
+#buttonArtist{
+  position:fixed;
+  left:1px;
+  margin-top:90px;
+}
 
-/*Design Bereich der Produktpräsentation */
-.produktShop .produktShopName span {
+.artistListAnsicht .artistName span {
   color: #fff;
 }
-.produktShop .aProdukt{
+.aArtist{
+
+  margin-top: 90px;
+  width: 220px;
+  height:250px;
+}
+.artistListAnsicht .aArtist{
   margin-top: 20px;
   width: 220px;
   heigth:250px;
 }
 
 
-.produktShop .produktShopName {
+.artistListAnsicht .artistName {
   background-color: rgba(7, 7, 7, 0.65);
   color: #8b7f48;
   margin-top: -30px;
@@ -26,7 +37,7 @@
   height: 250px;
 }
 
-.produktShopName span {
+.artistName span {
   line-height: 30px;
   position: relative;
   top: -10px;
