--- a/app/less/style.less
+++ b/app/less/style.less
@@ -49,18 +49,18 @@ body {
 #b3 {
   margin-bottom: -35px;
   margin-right: -20px;
-  color: #000;
+  color: black;
 }
 
 #b4 {
   margin-bottom: -40px;
   margin-right: -10px;
-  color: darkgoldenrod;
+  color: darkred;
 }
 
 #b5 {
   margin-bottom: -40px;
-  color: darkred;
+  color: darkgoldenrod;
 }
 
 
