Impressum: text hinzugefügt

--- a/app/tpl/partials/impressumMain.hbs
+++ b/app/tpl/partials/impressumMain.hbs
@@ -1,6 +1,11 @@
 <div id="description" , class="container-fluid">
     <h1 id="headline">ABOUT US</h1>
-    <p>Description of company.</p>
+    <p>„Power To The People“ ist ein Slogan für das Volk und gegen das Establishment. Es steht für einen Umbruch, für
+        die Verteilung der Macht aus dem festen Griff von Wenigen in die offenen Hände von Vielen. Mit exakt dieser
+        Vision und dieser Perspektive möchte sich das Unternehmen „Power To The People“ auf dem Modemarkt etablieren,
+        Veränderungen bewirken und der breiten Masse von Modedesignern einen Teil der Kraft der großen Konzerne zurück
+        geben.
+    </p>
 </div>
 
 
