Impressum: Formular geändert

--- a/app/less/impressum.less
+++ b/app/less/impressum.less
@@ -28,9 +28,20 @@
   margin-left: 20%;
 }
 
-#speak {
+#contactTitle {
   text-align: center;
+  color: darkred;
+}
+
+#contactForm {
+  width: 50%;
+  position: inherit;
+  margin-left: 25%;
   font-family: "Shree Devanagari 714";
+}
+
+#question {
+  width: 25%;
 }
 
 #contactUs {
