--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -48,7 +48,7 @@
     <div class="container-fluid">
 
         <div class="navbar-header"> 
-            <a href="index.html"><img id="bild1"
+            <a href="index.html"><img id="logo"
                                       src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/Farbkonzept%204.png"></a>
         </div>
 
