--- a/app/less/style.less
+++ b/app/less/style.less
@@ -24,6 +24,7 @@ body {
 .header {
 }
 
+/*Customizing of header*/
 .navbar-default {
   height: 90px;
   width: auto;
@@ -32,7 +33,7 @@ body {
   align: center;
 }
 
-#bild1 {
+#logo {
   max-height: 100%;
   position: absolute;
   top: 0;
@@ -63,8 +64,8 @@ body {
   color: darkgoldenrod;
 }
 
-
-/*#bild2 {
+/*Logo in the middle of video*/
+/*#logo2 {
   width: 50%;
   height: 50%;
   display: block;
@@ -74,13 +75,7 @@ body {
 
 }*/
 
-/* Make the masthead heading the same height as the navigation
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 10px;
-}*/
-
+/*Backgroundvideo customizing*/
 .jumbotron {
   margin-top: 60px;
   background-image: url("https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/giphy.gif");
@@ -95,19 +90,23 @@ body {
   display: flex;
   align-items: center;
 }
+
+/*Text in the middle of jumbotron*/
 #pttp {
   font-family: "Shree Devanagari 714";
   color: darkred;
 }
-/*Text on jumbotron*/
 
+/* Keine Ahnung
 .table {
   border: 1px solid black;
 }
 
 .tr {
   height: 40px;;
-}
+}*/
+
+/*Customizing rows*/
 .row {
   font-family: "Shree Devanagari 714";
   color: darkred;
@@ -156,8 +155,7 @@ body {
   background-size: 100%;
 }
 
-
-/* Custom page footer */
+/* Customizing footer */
 .footer {
   padding-top: 19px;
   color: #777;
@@ -165,11 +163,12 @@ body {
   font-family: "Shree Devanagari 714";
 }
 
+/*Back to top*/
 #btt {
   color: darkred;
 }
 
-/* Customize container */
+/* Customize container*/
 @media (min-width: 768px) {
   .container {
     max-width: 730px;
@@ -177,10 +176,10 @@ body {
   }
 }
 .container-narrow > hr {
-  margin: 30px 0;
+  margin: 30px;
 }
 
-/* Main marketing message and sign up button */
+/* Main marketing message and sign up button*/
 .fotos {
   text-align: left;
 ;
