--- a/app/tpl/partials/impressumMain.hbs
+++ b/app/tpl/partials/impressumMain.hbs
@@ -26,44 +26,25 @@
 
 </div>
 
-<div id="speak">
-    <h4 id="contactUs">Contact Us</h4>
-    <p>funktioniert noch nicht</p>
-    <form id="contact" , class="form-horizontal" role="form" method="post" action="#">
-        <div class="form-group">
-            <label for="name" class="col-sm-2 control-label">Name</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="name" name="name" placeholder="First & Last Name" value="">
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="email" class="col-sm-2 control-label">Email</label>
-            <div class="col-sm-10">
-                <input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com"
-                       value="">
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="message" class="col-sm-2 control-label">Message</label>
-            <div class="col-sm-10">
-                <textarea class="form-control" rows="4" name="message"></textarea>
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="human" class="col-sm-2 control-label">2 + 3 = ?</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="human" name="human" placeholder="Your Answer">
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-10 col-sm-offset-2">
-                <input id="submit" name="submit" type="submit" value="Send" class="btn btn-primary">
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-10 col-sm-offset-2">
-                <! Will be used to display an alert to the user>
-            </div>
-        </div>
-    </form>
+<!--Contact form-->
+<div id="contactForm">
+    <h4 id="contactTitle">Contact Us</h4>
+    <div class="form-group">
+        <label for="usr">Name:</label>
+        <input type="text" class="form-control" id="usr">
+    </div>
+    <div class="form-group">
+        <label for="pwd">Password:</label>
+        <input type="password" class="form-control" id="pwd">
+    </div>
+    <div class="form-group">
+        <label for="comment">Comment:</label>
+        <textarea class="form-control" rows="5" id="comment"></textarea>
+    </div>
+    <div class="form-group">
+        <label for="question">Please answer: 3+4=?</label>
+        <input type="text" class="form-control" id="question">
+    </div>
+
+    <div id="send" class="btn btn-primary">Send</div>
 </div>
