Impressum: Formular geändert2

--- a/app/tpl/partials/impressumMain.hbs
+++ b/app/tpl/partials/impressumMain.hbs
@@ -34,12 +34,12 @@
         <input type="text" class="form-control" id="usr">
     </div>
     <div class="form-group">
-        <label for="pwd">Password:</label>
-        <input type="password" class="form-control" id="pwd">
+        <label for="email">e-mail:</label>
+        <input type="email" class="form-control" id="email">
     </div>
     <div class="form-group">
-        <label for="comment">Comment:</label>
-        <textarea class="form-control" rows="5" id="comment"></textarea>
+        <label for="message">Message:</label>
+        <textarea class="form-control" rows="5" id="message"></textarea>
     </div>
     <div class="form-group">
         <label for="question">Please answer: 3+4=?</label>
