--- a/app/tpl/partials/footer.hbs
+++ b/app/tpl/partials/footer.hbs
@@ -14,6 +14,7 @@
 <script src="/node_modules/baqend/dist/baqend.js"></script> 
 <script src="js/main.js"></script> 
 <script src="js/webShop.js"></script> 
+<script src="js/produktAnsicht.js"></script> 
 
 <!-- endbuild -->
  </body> 
