--- a/app/less/impressum.less
+++ b/app/less/impressum.less
@@ -1,21 +1,24 @@
-/*Style von Impressum*/
+/*Style of Imprint*/
 
+/*Sto sam stavila to u fluid??*/
 #description {
   margin-top: 90px;
   font-family: "Shree Devanagari 714";
   text-align: center;
 }
 
+/*ABOUT US*/
 #headline {
   color: darkred;
   font-weight: bold;
 }
 
-#fixed {
+/*Imprint: Text positioned*/
+#imprint {
   text-align: center;
 }
 
-#hi {
+#imprintTitle {
   color: darkred;
   font-family: "Shree Devanagari 714";
 }
@@ -28,6 +31,7 @@
   margin-left: 20%;
 }
 
+/*Title of contact form*/
 #contactTitle {
   text-align: center;
   color: darkred;
@@ -42,14 +46,4 @@
 
 #question {
   width: 25%;
-}
-
-#contactUs {
-  color: darkred;
-
-}
-
-#contact {
-  width: 50%;
-  margin-left: 23%;
 }
