--- a/app/tpl/partials/footer.hbs
+++ b/app/tpl/partials/footer.hbs
@@ -15,6 +15,7 @@
 <script src="js/main.js"></script> 
 <script src="js/webShop.js"></script> 
 <script src="js/produktAnsicht.js"></script> 
+<script src="js/impressum.js"></script> 
 
 <!-- endbuild -->
  </body> 
