--- a/app/tpl/partials/impressumMain.hbs
+++ b/app/tpl/partials/impressumMain.hbs
@@ -1,4 +1,4 @@
-<div id="description" , class="container-fluid">
+<div id="description" class="container-fluid">
     <h1 id="headline">ABOUT US</h1>
     <p>„Power To The People“ ist ein Slogan für das Volk und gegen das Establishment. Es steht für einen Umbruch, für
         die Verteilung der Macht aus dem festen Griff von Wenigen in die offenen Hände von Vielen. Mit exakt dieser
@@ -9,9 +9,9 @@
 </div>
 
 
-<div id="fixed" class="container">
+<div id="imprint" class="container">
 
-    <h2 id="hi">IMPRINT</h2>
+    <h2 id="imprintTitle">IMPRINT</h2>
 
     <pre id="infos">
         POWER TO THE PEOPLE
