--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -1,4 +1,4 @@
-
+<div class="Webshoppage">
 <div class="container">
 
     <div class="list-group-Segment">
@@ -133,4 +133,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
